syntax="proto3";

package trisa.gds.models.v1beta1;
option go_package = "github.com/trisacrypto/trisa/pkg/trisa/gds/models/v1beta1;models";

message Certificate {
    // x.509 metadata information for ease of reference
    // note that the serial number as a hex string can be used with the Sectigo API
    int64 version = 1;
    bytes serial_number = 2;
    bytes signature = 3;
    string signature_algorithm = 4;
    string public_key_algorithm = 5;

    // Issuer and subject information from Sectigo
    Name subject = 6;
    Name issuer = 7;

    // Validity information
    string not_before = 8;
    string not_after = 9;
    bool revoked = 10;

    // The ASN1 encoded full certificate without the trust chain
    bytes data = 11;

    // The complete trust chain including the leaf certificate as a gzip compressed
    // PEM encoded file. This field can be deserialized into a trust.Provider.
    bytes chain = 12;
}

// An X.509 distinguished name with the common elements of a DN.
message Name {
    string common_name = 1;
    string serial_number = 2;
    repeated string organization = 3;
    repeated string organizational_unit = 4;
    repeated string street_address = 5;
    repeated string locality = 6;
    repeated string province = 7;
    repeated string postal_code = 8;
    repeated string country = 9;
}